# tweet-challenge

./: db.sqlite3  pyproject.toml
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py
tweets/templates/: all_tweets.html
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
